<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>undur</groupId>
	<artifactId>undur-reactor</artifactId>
	<version>8.0.0.slim-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Wonder reactor</name>
	<modules>
		<module>ERExtensions</module>
		<module>ERLoggingReload4j</module>
		<module>AjaxSlim</module>
		<module>Ajax</module>
	</modules>
	<properties>
		<wonder.core.group>wonder.core</wonder.core.group>
		<wonder.ajax.group>wonder.ajax</wonder.ajax.group>
		<wonder.version>8.0.0.slim-SNAPSHOT</wonder.version>

		<webobjects.group>com.webobjects</webobjects.group>
		<webobjects.version>5.4.3</webobjects.version>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>is.rebbi</groupId>
				<artifactId>vermilingua-maven-plugin</artifactId>
				<version>1.0.0-SNAPSHOT</version>
				<extensions>true</extensions>
				<configuration>
					<woresourcesFolderName>resources</woresourcesFolderName>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>21</source>
					<target>21</target>
					<encoding>utf8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.8.1</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<dependency>
			<groupId>${webobjects.group}</groupId>
			<artifactId>JavaFoundation</artifactId>
			<version>${webobjects.version}</version>
		</dependency>
		<dependency>
			<groupId>${webobjects.group}</groupId>
			<artifactId>JavaWebObjects</artifactId>
			<version>${webobjects.version}</version>
			<exclusions>
				<exclusion>
					<groupId>${webobjects.group}</groupId>
					<artifactId>JavaXML</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.9</version>
		</dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>wocommunity.releases</id>
			<name>WOCommunity Releases Repository</name>
			<url>https://maven.wocommunity.org/content/groups/public</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>wocommunity.snapshots</id>
			<name>WOCommunity Snapshots Repository</name>
			<url>https://maven.wocommunity.org/content/groups/public-snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
</project>